# nlft-qsp

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/: benchmarks.ipynb  benchmarks_weiss.ipynb  catalysts.ipynb  eigenvalue_filtering.ipynb  grover.ipynb  matrix_inversion.ipynb
examples_md/: bivar_weiss_imp.ipynb  bivar_weiss_trivial.ipynb
nlft_qsp/: approximate.py  catalysts.py  plot.py  poly.py  poly_md.py  qsp.py
nlft_qsp/numerics/: __init__.py  backend_numpy.py
nlft_qsp/solvers/: __init__.py  convolve_optimize.py  half_cholesky.py  layer_stripping.py  prony.py  weiss.py  weiss_matrix.py  weiss_md.py
tests/: tests_catalysts.py  tests_inlft.py  tests_polynomial.py  tests_polynomial_matrix.py  tests_polynomial_md.py  tests_qsp.py
