[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlft-qsp"
version = "1.0.0"
description = "A package for computing Quantum Signal Processing phase factors using Non-Linear Fourier Analysis."
authors = [
    { name = "Lorenzo Laneve" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LICENSE"} # or {file = "LICENSE"}
keywords = ["quantum", "signal-processing", "fourier"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=2.0,<3.0",
    "scipy>=1.15,<2.0",
    "matplotlib>=3.10,<4.0",
    "mpmath>=1.3,<2.0",
    "sympy>=1.0,<2.0",
]

[project.urls]
Repository = "https://github.com/LorenzoLaneve/nlft-qsp"

[tool.setuptools]
packages = ["nlft_qsp", "nlft_qsp.solvers", "nlft_qsp.numerics"]